# alert-system

./: IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md  start-wetempglass.sh  stop-wetempglass.sh
stock-py/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  STOCK_MIGRATION_MATRIX.md  fetch_test.py  generate_admin_token.py  generate_offline_data.py  generate_real_token.py  import_history_archive.py  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt  run_backtest_benchmarks.py  run_live_strategy_goal_benchmark.py  run_platform_workbench_interaction_smoke.cjs  run_platform_workbench_smoke.py  stock-py-analysis-report.md  todo.md
stock-py/.github/workflows/: qa.yml
stock-py/alembic/: env.py
stock-py/alembic/versions/: 20260404_0001_initial_infra_schema.py  20260404_0002_capacity_indexes.py  20260404_0003_event_outbox_pipeline.py  (+6 more)
stock-py/apps/admin_api/: main.py  (+1 more)
stock-py/docs/: ARCHITECTURE.md  POST_MIGRATION_V2_PLAN.md
stock-py/domains/: __init__.py
stock-py/ops/: README.md  TARGET_TOPOLOGY.md  docker-compose.yml  ecosystem.config.js  err.txt  postgresql.conf.tuning
stock-python/: .env  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
stock-python/docs/: CHECKLIST.md  DOD.md  README.md
stock-python/infra/: cache.py  config.py  database.py  logging.py  rate_limit.py
stock-python/k8s/: configmap.yml  deployment.yml  ingress.yml  secret.yml  service.yml
stock-python/static/: blank.html  charts.html  dashboard-crypto.html  form-elements.html  subscription.html  sw.js  tables.html
(+715 files in other folders)
