[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-py"
version = "1.0.0"
description = "Stock trading platform rewritten for 1M DAU support"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Stock Team", email = "team@example.com"}
]
dependencies = []

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-asyncio",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false